@@ -1252,6 +1252,8 @@ void SI_Game::show_credits()
 
 bool SI_Game::new_game(Vga_file &shapes)
 {
+	SDL_EnableUNICODE(1);
+
 	int menuy = topy+110;
 	Font *font = fontManager.get_font("MENU_FONT");
 
@@ -1365,12 +1367,15 @@ bool SI_Game::new_game(Vga_file &shapes)
 				break;
 			default:
 				{
-					int c = event.key.keysym.sym;
-					if(selected==0 && c>=SDLK_SPACE && c<=SDLK_z)
+					if (selected == 0) // on the text input field?
 					{
 						int len = strlen(npc_name);
-						char chr = (event.key.keysym.mod & KMOD_SHIFT) ? toupper(c) : c;
-						if(len<max_len)
+						char chr = 0;
+
+						if ((event.key.keysym.unicode & 0xFF80) == 0)
+							chr = event.key.keysym.unicode & 0x7F;
+
+						if (chr >= ' ' && len < max_len)
 						{
 							npc_name[len] = chr;
 							npc_name[len+1] = 0;
@@ -1399,6 +1404,8 @@ bool SI_Game::new_game(Vga_file &shapes)
 		gwin->clear_screen(true);	
 		ok = gwin->init_gamedat(true);
 	}
+
+	SDL_EnableUNICODE(0);
 
 	return ok;
 }
